# convert

./: .gitignore  AGENTS.md  README.md  TODO.md  _depr_convert_data.py  pyproject.toml  requirements.txt
docs/: OUTLINE.md  SPEC.md  new_command.md  publish.md  test_drive.md
sleepyconvert/: __init__.py  main.py
sleepyconvert/cli/: __init__.py  command_logic.py
sleepyconvert/core/: config.py  logging.py  sleepy_params.py
sleepyconvert/utils/: __init__.py  csv_json.py  csv_parquet.py  csv_pkl.py  csv_xlsx.py  data_shared.py  doc_shared.py  html_md.py  html_pdf.py  image_shared.py  json_parquet.py  json_pkl.py  json_xlsx.py  md_pdf.py  parquet_pkl.py  parquet_xlsx.py  pkl_xlsx.py  png_jpg.py
sleepyconvert_toolchain/: commands.py  utils.py
tests/: conftest.py
tests/cli/: archive.py  csv_json.py  csv_parquet.py  csv_pkl.py  csv_xlsx.py  html_md.py  html_pdf.py  json_parquet.py  json_pkl.py  json_xlsx.py  md_pdf.py  parquet_pkl.py  parquet_xlsx.py  pkl_xlsx.py  png_jpg.py
tests/core/: test_config.py  test_sleepy_params.py
tools/: _verify_test.py  format.sh  test.sh
